fix progress bar on firefox

--- a/src/assets/stylesheets/ProgressBar.scss
+++ b/src/assets/stylesheets/ProgressBar.scss
@@ -10,6 +10,7 @@
 
   progress {
     flex: 1;
+    min-width: 0px;
   }
 
   .btn-outer {
